Use Init dictionaries in RTCPeerConnection legacy methods.

In addition, correctly handle the conversion to WebRTCIceCandidate when given a valid RTCIceCandidateInit with null sdpMLineIndex.

BUG=612118

Review-Url: https://codereview.chromium.org/2007923003
Cr-Commit-Position: refs/heads/master@{#396449}

Former-commit-id: 93ba0b84e5d94b8da6ddf025b62f0ac3c2f8c79a